chore: Fixed swagger parameter in todo
